--- a/content/xed/notebook_ames_datasets.ipynb
+++ b/content/xed/notebook_ames_datasets.ipynb
@@ -10,11 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "import mpld3\n",
+    "mpld3.enable_notebook()\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
